--- a/SimTECH/SimTECH/Pages/RaceWeek/Components/SignalNote.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Components/SignalNote.razor
@@ -5,14 +5,11 @@
 </MudPaper>
 
 @code {
-    [Parameter]
-    public double LapPercentage { get; set; }
+    [Parameter] public double LapPercentage { get; set; }
 
-    [Parameter]
-    public RacerEvent Signal { get; set; }
+    [Parameter] public RacerEvent Signal { get; set; }
 
-    [Parameter]
-    public Size Size { get; set; } = Size.Small;
+    [Parameter] public Size Size { get; set; } = Size.Small;
 
     private string _styles
     {
