--- a/SimTECH/SimTECH/Pages/RaceWeek/Components/SimRacerProgressionLinear.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Components/SimRacerProgressionLinear.razor
@@ -11,11 +11,9 @@
 <SimProgressLinear Bars="@coloursOfUsedTyres" />
 
 @code {
-    [Parameter, EditorRequired]
-    public RaceDriver RaceDriver { get; set; }
+    [Parameter, EditorRequired] public RaceDriver RaceDriver { get; set; }
 
-    [Parameter, EditorRequired]
-    public int CalculationCount { get; set; }
+    [Parameter, EditorRequired] public int CalculationCount { get; set; }
 
     private List<(double, string)> coloursOfUsedTyres
     {
