--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Qualifying.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Qualifying.razor
@@ -2,7 +2,7 @@
 
 <MudContainer MaxWidth="MaxWidth.Large">
     <div id="qualy-table">
-        @if (!loading)
+        @if (!Loading)
         {
             <CommonSession Drivers="@QualyDrivers"
                            AmountRuns="@amountRuns"
