--- a/SimTECH/SimTECH/Pages/Stats/Dialogs/DriverCompareStat.razor
+++ b/SimTECH/SimTECH/Pages/Stats/Dialogs/DriverCompareStat.razor
@@ -148,7 +148,7 @@
         dataSet.DataPoints.Add(new DataPoint("Wins", driverResults.Count(e => e.Position == 1)));
         dataSet.DataPoints.Add(new DataPoint("Poles", driverResults.Count(e => e.Grid == 1)));
         dataSet.DataPoints.Add(new DataPoint("Fastest laps", driverResults.Count(e => e.FastestLap)));
-        dataSet.DataPoints.Add(new DataPoint("Retired", driverResults.Count(e => e.Status == RaceStatus.Dnf || e.Status == RaceStatus.Dsq || e.Status == RaceStatus.Fatal)));
+        dataSet.DataPoints.Add(new DataPoint("Retirements", driverResults.Count(e => e.Status == RaceStatus.Dnf || e.Status == RaceStatus.Dsq || e.Status == RaceStatus.Fatal)));
 
         comparableDrivers.Add(driver, dataSet);
     }
