--- a/SimTECH/SimTECH/Pages/_Host.cshtml
+++ b/SimTECH/SimTECH/Pages/_Host.cshtml
@@ -23,10 +23,10 @@
 
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
-            An error has occurred. This application may no longer respond until reloaded.
+            Oh no! Looks like something broke inside the application, you're now allowed to sent an angry letter to "Haan" on Discord.
         </environment>
         <environment include="Development">
-            Hey-Ho! Something got-Hee messed up-Ho! Check the Browser Inspection Tool for details.
+            Hey-Ho! Something got-Hee messed up-Ho! Look-Oh at the Browser-Ho Inspection Details for more He-Ho information!
         </environment>
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
