--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -302,6 +302,11 @@ th {
     font-size: 4em;
 }
 
+.flex-block-column {
+    display: flex;
+    flex-direction: column;
+}
+
 .flex-block-row {
     display: flex;
     flex-direction: row;
@@ -655,7 +660,9 @@ th {
     box-shadow: var(--mud-palette-secondary) 0 0 2em !important;
 }
 
-.extra-dense .mud-table-cell {
+.extra-dense .mud-table-cell,
+.extra-dense.mud-simple-table * tr th,
+.extra-dense.mud-simple-table * tr td {
     padding-top: 4px !important;
     padding-bottom: 4px !important;
 }
