--- a/SimTECH/SimTECH/Pages/Guide/Topics/Glossary.razor
+++ b/SimTECH/SimTECH/Pages/Guide/Topics/Glossary.razor
@@ -1,5 +1,5 @@
-﻿<MudText Typo="Typo.h6">Race</MudText>
-<MudDivider Class="my-1" />
+﻿<MudText Typo="Typo.h6">Glossary</MudText>
+<MudDivider Class="my-2" />
 
 <MudTable T="GlossaryItem" Items="@GlossaryTerms.OrderBy(e => e.Term)" Dense="true">
     <HeaderContent>
