--- a/SimTECH/SimTECH/Pages/Guide/Topics/Intro.razor
+++ b/SimTECH/SimTECH/Pages/Guide/Topics/Intro.razor
@@ -1,7 +1,5 @@
-﻿@* @page "/guide/intro" *@
-
-<MudText Typo="Typo.h6">FAQ</MudText>
-<MudDivider Class="my-1" />
+﻿<MudText Typo="Typo.h6">FAQ</MudText>
+<MudDivider Class="my-2" />
 
 <MudText>
     Congratulation, you found the FAQ!
