--- a/SimTECH/SimTECH/Pages/Guide/Topics/RaceCategory/SafetyMoment.razor
+++ b/SimTECH/SimTECH/Pages/Guide/Topics/RaceCategory/SafetyMoment.razor
@@ -1,4 +1,5 @@
 ﻿<MudText Typo="Typo.h6">Safety car</MudText>
+<MudDivider Class="my-2" />
 <MudText>
     Safety cars may come out after a driver crashes out.
     A crash which caused an injury (or worse) always causes a safey car.
