--- a/SimTECH/SimTECH/Pages/Guide/Topics/UnknownTopic.razor
+++ b/SimTECH/SimTECH/Pages/Guide/Topics/UnknownTopic.razor
@@ -1,3 +1,3 @@
 ﻿<MudText>
-    Got no idea what you are trying to do here!
+    Welcome to the most special zone, which is the unaccounted for zone which you somehow managed to open which shouldn't normally happen.
 </MudText>
