--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/SeasonDrivers.razor
@@ -51,11 +51,9 @@
 </MudContainer>
 
 @code {
-    [CascadingParameter]
-    public OverviewModel OverviewModel { get; set; }
+    [CascadingParameter] public OverviewModel OverviewModel { get; set; }
 
-    [Parameter]
-    public EventCallback<SeasonDriver?> OnEditorOpen { get; set; }
+    [Parameter] public EventCallback<SeasonDriver?> OnEditorOpen { get; set; }
 
     private List<SeasonDriverList> DriverItems { get; set; } = new();
 
