--- a/SimTECH/SimTECH/Shared/HelpBlocks/RaceweekHelp.razor
+++ b/SimTECH/SimTECH/Shared/HelpBlocks/RaceweekHelp.razor
@@ -1,6 +1,28 @@
 ﻿<MudText Typo="Typo.h6">Rawe ceek</MudText>
-<MudDivider Class="my-1" />
+<MudDivider Class="my-2" />
 
 <MudText>
-    Racing is what we do, in this section you can read up more about the racing process and the calculations in it.
+    This area represents a race week, here you can act on all the events which happen during a single race weekend.
+    Currently this means the following events: practice, qualifying and the race itself.
+    There's also of course the page you land at with all the information for the weekend
+    and the post-race to see an overview of the results.
+</MudText>
+<br />
+<MudText Typo="Typo.subtitle2">Practice</MudText>
+<MudText>
+    For practicing the race. Setup is determined here.
+    RNG is double the qualifying RNG.
+    Is optional to run, can also immediatly go to qualifying.
+</MudText>
+<br />
+<MudText Typo="Typo.subtitle2">Qualifying</MudText>
+<MudText>
+    Decides the starting order for the race.
+    This is required before starting the race.
+</MudText>
+<br />
+<MudText Typo="Typo.subtitle2">Race</MudText>
+<MudText>
+    Additional pace value applied for every advance.
+    Required to finish a "race week".
 </MudText>
